--- a/序.md
+++ b/序.md
@@ -26,6 +26,8 @@
 - 第19章（并行编程和计算思维）：在上一版中，本章讨论了算法选择和问题分解，同时从迭代MRI重建和静电势图的章节中汲取示例。在这一版中，本章修订了以从更多章节中汲取示例，作为第I和第II部分的总结章节。特别扩展了问题分解的讨论，引入了输出中心分解和输入中心分解的一般化，并通过多个示例讨论了它们之间的权衡。
 - 第21章（CUDA动态并行）：在上一版中，本章详细介绍了动态并行中的不同编程构造和API调用的语义。在这一版中，本章的重点更多地转向应用示例，其余编程细节简要讨论，并参考有兴趣的读者查阅CUDA编程指南。
 
+<img width="767" alt="image" src="https://github.com/user-attachments/assets/e35b70d6-b122-4383-9cfa-7853209376c4">
+
 在进行所有这些改进时，我们努力保留最受欢迎的特性。首先，我们尽量使解释尽可能直观。虽然形式化某些概念尤其是在介绍基本并行算法时具有诱惑力，但我们努力保持所有解释直观和实用。其次，我们尽量使书籍简洁。虽然增加新材料很有诱惑力，但我们希望尽量减少读者需要学习所有关键概念的页面数量。我们通过将数值考虑章节移至附录实现了这一点。虽然数值考虑是并行计算的一个极其重要的方面，但我们发现章节中的大量内容已经为许多具有计算机科学或计算科学背景的读者所熟知。为此，我们更倾向于将更多的空间用于涵盖额外的并行模式。
 
 除了自上一版以来增加新章节和大幅重写其他章节外，我们还将本书组织为四个主要部分。该组织在图P.1中进行了说明。第一部分介绍了并行编程的基本概念、GPU架构、性能分析和优化。第二部分通过涵盖六种常见的计算模式并展示如何将它们并行化和优化来应用这些概念。每个并行模式还介绍了一种新的编程功能或技术。第三部分介绍了额外的高级模式和应用，并继续应用在第二部分中练习的优化。然而，它更加侧重于探索替代问题分解形式以并行化计算，并分析不同分解及其相关数据结构之间的权衡。最后，第四部分向读者展示高级实践和编程功能。
