--- a/1_介绍并行运算.md
+++ b/1_介绍并行运算.md
@@ -1,4 +1,4 @@
-### 章节概述
+# 第一章 介绍并行运算
 
 1.1 异构并行计算  
 1.2 为什么需要更高速度或并行性？  
@@ -26,6 +26,47 @@
 
 这种多核和多线程之间的巨大峰值性能差距已经积累了显著的“电势”，并且在某个时候必须有所突破。我们已经达到了这一点。到目前为止，这种大的峰值性能差距已经激励许多应用开发人员将其软件中的计算密集部分转移到GPU上执行。也许更重要的是，并行执行的显著提高的性能已经使深度学习等革命性的新应用成为可能，这些应用本质上包含计算密集的部分。这些计算密集的部分也是并行编程的主要目标：当有更多工作要做时，就有更多机会在协作的并行工作者（即线程）之间分配工作。
 
+![image](https://github.com/user-attachments/assets/862c3260-52db-4de4-8097-1297183cb867)
+> CPU和GPU有着根本不同的设计理念：（A）CPU设计以延迟为导向；（B）GPU设计以吞吐量为导向。
+
 我们可能会问，为什么多线程GPU和多核CPU之间会有如此大的峰值性能差距？答案在于这两种处理器的基本设计理念的差异，如图1.1所示。CPU的设计（如图1.1A所示）优化了顺序代码的性能。算术单元和操作数数据传送逻辑被设计为以增加每单位的芯片面积和功耗为代价来最小化算术运算的有效延迟。大型的最后一级片上缓存被设计为捕获频繁访问的数据，并将一些长延迟的内存访问转换为短延迟的缓存访问。复杂的分支预测逻辑和执行控制逻辑用于减轻条件分支指令的延迟。通过减少操作的延迟，CPU硬件减少了每个线程的执行延迟。然而，低延迟的算术单元、复杂的操作数传送逻辑、大容量缓存和控制逻辑消耗了芯片面积和功耗，这些面积和功耗本可以用于提供更多的算术执行单元和内存访问通道。这种设计方法通常被称为面向延迟的设计。
 
 另一方面，GPU的设计理念受到快速增长的视频游戏行业的影响，该行业对在先进游戏中每帧视频执行大量浮点计算和内存访问的能力施加了巨大的经济压力。这种需求促使GPU供应商寻找方法，以最大化用于浮点计算和内存访问吞吐量的芯片面积和功率预算。
+
+对图形应用中的任务（如视点变换和对象渲染）每秒执行大量浮点计算的需求是很直观的。此外，每秒进行大量内存访问的需求同样重要，甚至可能更重要。许多图形应用的速度受限于数据从内存系统传递到处理器以及从处理器传回内存系统的速率。GPU必须能够将大量数据快速地移入和移出其DRAM（动态随机存取存储器）的图形帧缓冲区，因为这种数据移动使得视频显示对游戏玩家来说更加丰富和令人满意。游戏应用普遍接受的松散内存模型（系统软件、应用程序和I/O设备期望其内存访问工作的方式）也使得GPU更容易支持大规模并行的内存访问。
+
+相比之下，通用处理器必须满足遗留操作系统、应用程序和I/O设备的要求，这些要求对支持并行内存访问提出了更多挑战，从而更难提高内存访问的吞吐量，通常称为内存带宽。因此，图形芯片的内存带宽约为同时代CPU芯片的10倍，我们预计GPU在内存带宽方面将继续保持优势。
+
+一个重要的观察是，降低延迟在功耗和芯片面积方面比增加吞吐量要昂贵得多。例如，通过增加算术单元的数量可以将算术吞吐量翻倍，代价是增加一倍的芯片面积和功耗。然而，将算术延迟减少一半可能需要将电流加倍，代价是芯片面积增加一倍以上并且功耗增加四倍。因此，GPU中的普遍解决方案是优化大量线程的执行吞吐量，而不是减少单个线程的延迟。这种设计方法通过允许流水线内存通道和算术操作具有长延迟来节省芯片面积和功耗。内存访问硬件和算术单元的面积和功耗的减少使得GPU设计师能够在一个芯片上增加更多这些单元，从而提高总体执行吞吐量。图1.1通过展示CPU设计中较少数量的较大算术单元和较少数量的内存通道（图1.1A）与较多数量的较小算术单元和较多数量的内存通道（图1.1B），直观地展示了设计方法的差异。
+
+这些GPU的应用软件预计将编写大量并行线程。硬件利用大量线程在一些线程等待长延迟内存访问或算术操作时找到要做的工作。图1.1B中的小缓存内存旨在帮助控制这些应用的带宽需求，这样多个访问相同内存数据的线程不需要都访问DRAM。这种设计风格通常称为面向吞吐量的设计，因为它旨在最大化大量线程的总执行吞吐量，同时允许单个线程执行时间可能要长得多。
+
+很明显，GPU被设计为并行、面向吞吐量的计算引擎，而它们在某些任务上表现不佳，而这些任务是CPU设计用于良好执行的。对于只有一个或很少线程的程序，具有较低操作延迟的CPU可以比GPU实现更高的性能。当一个程序有大量线程时，具有更高执行吞吐量的GPU可以比CPU实现更高的性能。因此，许多应用程序可能同时使用CPU和GPU，在CPU上执行顺序部分，在GPU上执行数值密集部分。这就是NVIDIA在2007年引入的统一计算设备架构（CUDA）编程模型旨在支持CPU和GPU联合执行应用程序的原因。
+
+需要注意的是，速度并不是应用开发人员选择处理器运行其应用程序的唯一决定因素。其他几个因素可能更为重要。首先也是最重要的，选择的处理器必须在市场上有非常大的存在，即处理器的安装基数。原因很简单。软件开发的成本最好由一个非常大的客户群来证明是合理的。在市场占有率较小的处理器上运行的应用程序不会有大量的客户基础。这一直是传统并行计算系统的一个主要问题，与通用微处理器相比，传统并行计算系统的市场存在可以忽略不计。只有少数由政府和大型公司资助的精英应用程序在这些传统并行计算系统上成功开发。随着多线程GPU的普及，这种情况已经发生了变化。由于在PC市场的普及，GPU已经销售了数亿个。几乎所有的台式电脑和高端笔记本电脑中都有GPU。目前已有超过10亿个支持CUDA的GPU在使用中。如此大的市场存在使得这些GPU对应用开发者来说在经济上具有吸引力。
+
+另一个重要的决定因素是实用的形式因素和易于访问性。直到2006年，并行软件应用程序都在数据中心服务器或部门集群上运行。但是这种执行环境往往限制了这些应用程序的使用。例如，在医学成像这样的应用中，基于64节点集群机器发表一篇论文是可以的。但实际临床应用中的磁共振成像（MRI）机器基于某种组合的PC和特殊硬件加速器。原因很简单，像GE和西门子这样的制造商不能在临床环境中销售需要机架式计算机服务器的MRI，而这种情况在学术部门环境中很常见。事实上，美国国立卫生研究院（NIH）曾一度拒绝资助并行编程项目；他们认为并行软件的影响将是有限的，因为巨大的集群机器在临床环境中无法工作。今天，许多公司已经开始销售带有GPU的MRI产品，NIH也资助使用GPU计算的研究。
+
+直到2006年，图形芯片非常难以使用，因为程序员必须使用等同于图形API（应用程序编程接口）函数的方法来访问处理单元，这意味着需要使用OpenGL或Direct3D技术来编程这些芯片。简而言之，计算必须表示为以某种方式绘制像素的函数，以便在这些早期的GPU上执行。这种技术被称为GPGPU，即使用GPU进行通用编程。即使在更高层次的编程环境中，底层代码仍然需要适应设计用于绘制像素的API。这些API限制了可以为早期GPU编写的应用类型。因此，GPGPU没有成为一种广泛的编程现象。尽管如此，这项技术足够令人兴奋，激发了一些英勇的努力和出色的研究成果。
+
+2007年CUDA的发布改变了一切（NVIDIA，2007）。CUDA不仅仅是软件上的变化；芯片上还增加了额外的硬件。NVIDIA实际上投入了硅片面积以促进并行编程的容易性。在G80及其后续的并行计算芯片中，GPGPU程序不再通过图形接口，而是通过芯片上的新的通用并行编程接口来服务CUDA程序的请求。通用编程接口大大扩展了可以轻松开发的GPU应用类型。所有其他软件层也进行了重新设计，使程序员可以使用熟悉的C/C++编程工具。
+
+尽管GPU是异构并行计算中的一个重要计算设备类别，但还有其他重要类型的计算设备在异构计算系统中用作加速器。例如，现场可编程门阵列（FPGA）已被广泛用于加速网络应用。本书中使用GPU作为学习工具所介绍的技术同样适用于这些加速器的编程任务。
+
+### 1.2 为什么需要更高的速度或并行性？
+
+正如我们在第1.1节所述，大规模并行编程的主要动机是使应用程序在未来的硬件世代中享受持续的速度提升。正如我们将在并行模式、高级模式和应用程序（第II部分和第III部分，第7至第19章）中讨论的那样，当一个应用程序适合并行执行时，GPU上的良好实现可以比在单个CPU核心上顺序执行的速度提升超过100倍。如果应用程序包含我们所称的“数据并行性”，通常只需几个小时的工作即可实现103倍的速度提升。
+
+有人可能会问，为什么应用程序会继续需要更高的速度。我们今天的许多应用程序似乎已经运行得足够快了。尽管当今世界有无数的计算应用程序，但许多未来令人兴奋的大众市场应用程序以前被认为是超级计算应用程序或超应用程序。例如，生物学研究社区正越来越多地转向分子水平。显微镜——无疑是分子生物学中最重要的仪器——过去依赖于光学或电子仪器。然而，这些仪器在分子级别的观察方面有其局限性。这些局限性可以通过结合计算模型来模拟传统仪器设定的边界条件下的分子活动来有效解决。通过模拟，我们可以测量更多细节并测试比传统仪器单独使用时更多的假设。在可预见的未来，这些模拟将继续从不断增加的计算速度中受益，这体现在可以建模的生物系统的规模和可以在可容忍的响应时间内模拟的反应时间长度上。这些改进将对科学和医学产生巨大影响。
+
+对于诸如视频和音频编码与处理的应用程序，考虑一下我们对数字高清（HD）电视与旧的NTSC电视的满意度。一旦我们体验到HDTV画面中的细节水平，很难回到旧技术。但考虑一下HDTV所需的所有处理。这是一个高度并行的过程，就像三维（3D）成像和可视化一样。未来，诸如视图合成和低分辨率视频的高分辨率显示等新功能将需要电视中的更多计算能力。在消费层面，我们将看到越来越多的视频和图像处理应用程序，这些应用程序可以改善图片和视频的焦点、照明和其他关键方面。
+
+更高的计算速度带来的好处之一是更好的用户界面。智能手机用户现在享受着具有高分辨率触摸屏的更加自然的界面，这些触摸屏的质量可与大屏幕电视相媲美。毫无疑问，未来版本的这些设备将结合具有3D视角的传感器和显示器、将虚拟和物理空间信息结合以增强可用性的应用程序，以及基于语音和计算机视觉的接口，这些都需要更高的计算速度。
+
+类似的发展正在消费电子游戏中进行。过去，驾驶游戏中的汽车只是预先安排的一组场景。如果你的车碰到障碍物，你的车辆路线不会改变；只有游戏分数会改变。你的车轮不会弯曲或损坏，即使你丢了一个车轮，驾驶也不会更困难。随着计算速度的提高，游戏可以基于动态模拟而不是预先安排的场景。我们可以预期未来会体验到更多这些现实效果。事故将损坏你的车轮，你的在线驾驶体验将更加真实。准确建模物理现象的能力已经激发了数字孪生的概念，其中物理对象在模拟空间中具有准确的模型，以便可以以更低的成本彻底进行应力测试和劣化预测。现实的物理效果建模和模拟是众所周知的需要非常大的计算能力。
+
+一个通过显著增加的计算吞吐量启用的新应用程序的重要例子是基于人工神经网络的深度学习。尽管自1970年代以来神经网络已经被积极研究，但由于训练这些网络需要太多的标记数据和太多的计算，它们在实际应用中一直无效。互联网的兴起提供了大量的标记图片，GPU的兴起提供了计算吞吐量的激增。因此，自2012年以来，基于神经网络的应用程序在计算机视觉和自然语言处理领域得到了快速采用。这种采用彻底改变了计算机视觉和自然语言处理应用，并触发了自动驾驶汽车和家用助手设备的快速发展。
+
+我们提到的所有新应用程序都涉及以不同方式和在不同级别模拟和/或表示物理和并发世界，并处理大量数据。处理这种庞大的数据量时，许多计算可以并行进行，尽管在某些时候需要进行整合。在大多数情况下，有效管理数据传输对并行应用程序的可实现速度有重大影响。尽管每天处理这些应用的少数专家通常熟知这些技术，但大多数应用程序开发人员可以从对这些技术的更直观理解和实际操作知识中受益。
+
+我们旨在以直观的方式向正式教育可能不是计算机科学或计算机工程的应用程序开发人员介绍数据管理技术。我们还旨在提供许多实用的代码示例和动手练习，以帮助读者获取工作知识，这需要一种实用的编程模型，促进并行实现并支持适当的数据传输管理。CUDA提供了这样一种编程模型，并已被庞大的开发者社区充分测试。
