--- a/1_介绍并行运算.md
+++ b/1_介绍并行运算.md
@@ -1,12 +1,12 @@
 # 第一章 介绍并行运算
 
-1.1 异构并行计算  
-1.2 为什么需要更高速度或并行性？  
-1.3 加速实际应用  
-1.4 并行编程的挑战  
-1.5 相关的并行编程接口  
-1.6 总体目标  
-1.7 本书的组织结构  
+* [1.1 异构并行计算]()
+* [1.2 为什么需要更高速度或并行性？]
+* [1.3 加速实际应用]
+* [1.4 并行编程的挑战]
+* [1.5 相关的并行编程接口]
+* [1.6 总体目标]  
+* [1.7 本书的组织结构]
 
 自计算机诞生以来，许多高价值的应用一直要求比计算设备所能提供的更高的执行速度和资源。早期的应用依赖于处理器速度、内存速度和内存容量的进步，以增强应用级能力，例如天气预报的及时性、工程结构分析的准确性、计算机生成图形的逼真度、每秒处理的航空预订数量和每秒处理的资金转移数量。近年来，像深度学习这样的新应用要求比最好的计算设备能提供的更高的执行速度和资源。这些应用需求在过去五十年里推动了计算设备能力的快速发展，并将在可预见的未来继续这样做。
 
@@ -18,7 +18,7 @@
 
 相反，随着每一代新微处理器的推出，将继续享有显著性能提高的应用软件将是并行程序，其中多个执行线程合作以更快地完成工作。这种并行程序相对于顺序程序的巨大优势被称为并发革命（Sutter和Larus，2005）。并行编程的实践并不新鲜。高性能计算（HPC）社区已经开发并行程序几十年。这些并行程序通常在昂贵的大型计算机上运行。只有少数精英应用程序可以证明使用这些计算机的合理性，从而将并行编程的实践限制在少数应用开发人员中。现在，所有新微处理器都是并行计算机，需要作为并行程序开发的应用程序数量急剧增加。现在，软件开发人员迫切需要了解并行编程，这是本书的重点。
 
-#### 1.1 异构并行计算
+## 1.1 异构并行计算
 
 自2003年以来，半导体行业在设计微处理器方面已经确立了两条主要轨迹（Hwu等，2008）。多核轨迹旨在保持顺序程序的执行速度，同时转向多核。多核处理器始于双核处理器，核心数量随着每一代半导体工艺的进步而增加。最近的一个例子是英特尔的多核服务器微处理器，最多可达24个处理器核心，每个核心是一个乱序、多指令发射的处理器，支持超线程，设计旨在最大化顺序程序的执行速度。另一个例子是最近的ARM Ampere多核服务器处理器，有128个处理器核心。
 
@@ -53,7 +53,7 @@
 
 尽管GPU是异构并行计算中的一个重要计算设备类别，但还有其他重要类型的计算设备在异构计算系统中用作加速器。例如，现场可编程门阵列（FPGA）已被广泛用于加速网络应用。本书中使用GPU作为学习工具所介绍的技术同样适用于这些加速器的编程任务。
 
-### 1.2 为什么需要更高的速度或并行性？
+## 1.2 为什么需要更高的速度或并行性？
 
 正如我们在第1.1节所述，大规模并行编程的主要动机是使应用程序在未来的硬件世代中享受持续的速度提升。正如我们将在并行模式、高级模式和应用程序（第II部分和第III部分，第7至第19章）中讨论的那样，当一个应用程序适合并行执行时，GPU上的良好实现可以比在单个CPU核心上顺序执行的速度提升超过100倍。如果应用程序包含我们所称的“数据并行性”，通常只需几个小时的工作即可实现103倍的速度提升。
 
@@ -70,3 +70,18 @@
 我们提到的所有新应用程序都涉及以不同方式和在不同级别模拟和/或表示物理和并发世界，并处理大量数据。处理这种庞大的数据量时，许多计算可以并行进行，尽管在某些时候需要进行整合。在大多数情况下，有效管理数据传输对并行应用程序的可实现速度有重大影响。尽管每天处理这些应用的少数专家通常熟知这些技术，但大多数应用程序开发人员可以从对这些技术的更直观理解和实际操作知识中受益。
 
 我们旨在以直观的方式向正式教育可能不是计算机科学或计算机工程的应用程序开发人员介绍数据管理技术。我们还旨在提供许多实用的代码示例和动手练习，以帮助读者获取工作知识，这需要一种实用的编程模型，促进并行实现并支持适当的数据传输管理。CUDA提供了这样一种编程模型，并已被庞大的开发者社区充分测试。
+
+## 1.3 加速实际应用程序
+
+我们能从并行化应用程序中期望获得多少加速？计算系统A对计算系统B的应用程序加速定义为在系统B中执行应用程序所需时间与在系统A中执行相同应用程序所需时间的比率。例如，如果一个应用程序在系统A中执行需要10秒，但在系统B中需要200秒，那么系统A相对于系统B的加速为200/10=20，这被称为20倍加速。
+
+通过并行计算系统相对于串行计算系统可以实现的加速取决于应用程序中可并行化的部分比例。例如，如果在可并行化部分上花费的时间占总时间的30%，那么并行部分获得100倍加速将使得应用程序的总执行时间最多减少29.7%。也就是说，整个应用程序的加速仅约为1/(1-0.297)=1.42倍。实际上，即使并行部分获得无限加速，也只能减少30%的执行时间，最多实现1.43倍的加速。这种通过并行执行实现的加速程度会受到应用程序中可并行部分的限制，这一事实被称为Amdahl定律 (Amdahl, 2013)。另一方面，如果99%的执行时间在并行部分，那么并行部分获得100倍加速将把应用程序的执行时间减少到原来的1.99%。这使整个应用程序获得50倍加速。因此，应用程序的大部分执行时间必须在并行部分，以便大规模并行处理器能够有效加速其执行。
+
+研究人员在某些应用程序上实现了超过100倍的加速。然而，这通常是在对算法进行优化和调整后，使得99.9%以上的应用工作在并行部分之后才实现的。
+
+另一个影响应用程序可实现加速程度的重要因素是数据从内存中访问和写入的速度。在实际操作中，直接并行化应用程序往往会饱和内存（DRAM）的带宽，导致仅约10倍的加速。解决内存带宽限制的方法之一是利用专门的GPU片上内存来大幅减少对DRAM的访问次数。然而，还必须进一步优化代码，以克服片上内存容量有限等限制。本书的一个重要目标是帮助读者充分理解这些优化，并熟练使用它们。
+
+请记住，相对于单核CPU执行所实现的加速程度也反映了CPU对应用程序的适用性。在某些应用程序中，CPU表现非常好，使得使用GPU加速性能变得更加困难。大多数应用程序都有一些部分可以通过CPU更好地执行。必须给CPU一个公平的表现机会，并确保代码编写使得GPU能够补充CPU的执行，从而正确利用CPU/GPU组合系统的异构并行计算能力。截至目前，结合多核CPU和多核GPU的大规模市场计算系统已经将T级计算带到了笔记本电脑，并将E级计算带到了集群中。
+
+图1.2展示了典型应用程序的主要部分。大部分实际应用程序的代码往往是顺序的。这些顺序部分被描绘为桃子的“核”区域；试图对这些部分应用并行计算技术就像咬桃核一样——感觉不好！这些部分非常难以并行化。CPU在处理这些部分时往往表现得非常好。好消息是，尽管这些部分可能占据大量代码，但它们通常只占超级应用程序执行时间的一小部分。
+
