--- a/1_介绍并行运算.md
+++ b/1_介绍并行运算.md
@@ -1,7 +1,7 @@
 # 第一章 介绍并行运算
 
-* [1.1 异构并行计算]()
-* [1.2 为什么需要更高速度或并行性？]
+* [1.1 异构并行计算](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#11-%E5%BC%82%E6%9E%84%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97)
+* [1.2 为什么需要更高速度或并行性？]()
 * [1.3 加速实际应用]
 * [1.4 并行编程的挑战]
 * [1.5 相关的并行编程接口]
