--- a/1_介绍并行运算.md
+++ b/1_介绍并行运算.md
@@ -3,7 +3,7 @@
 * [1.1 异构并行计算](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#11-%E5%BC%82%E6%9E%84%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97)
 * [1.2 为什么需要更高速度或并行性？](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#12-%E4%B8%BA%E4%BB%80%E4%B9%88%E9%9C%80%E8%A6%81%E6%9B%B4%E9%AB%98%E7%9A%84%E9%80%9F%E5%BA%A6%E6%88%96%E5%B9%B6%E8%A1%8C%E6%80%A7)
 * [1.3 加速实际应用](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#13-%E5%8A%A0%E9%80%9F%E5%AE%9E%E9%99%85%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F)
-* [1.4 并行编程的挑战]
+* [1.4 并行编程的挑战]()
 * [1.5 相关的并行编程接口]
 * [1.6 总体目标]  
 * [1.7 本书的组织结构]
@@ -85,3 +85,26 @@
 
 图1.2展示了典型应用程序的主要部分。大部分实际应用程序的代码往往是顺序的。这些顺序部分被描绘为桃子的“核”区域；试图对这些部分应用并行计算技术就像咬桃核一样——感觉不好！这些部分非常难以并行化。CPU在处理这些部分时往往表现得非常好。好消息是，尽管这些部分可能占据大量代码，但它们通常只占超级应用程序执行时间的一小部分。
 
+![image](https://github.com/user-attachments/assets/cb1d10ac-483d-44b0-a2b0-d4a8e4bd974e)
+
+图1.2显示了顺序和并行应用程序部分的覆盖范围。顺序部分和传统单核CPU覆盖部分相互重叠。传统的GPGPU技术对数据并行部分的覆盖非常有限，因为它仅限于可以转化为绘制像素的计算。功率限制是扩展单核CPU以覆盖更多数据并行部分的主要障碍。
+
+接下来是我们称之为“桃肉”的部分。这些部分很容易并行化，早期的一些图形应用程序也是如此。在异构计算系统中进行并行编程可以显著提高这些应用程序的速度。如图1.2所示，早期的GPGPU编程接口仅覆盖桃肉部分的一小部分，这类似于一些最令人兴奋的应用程序的小部分。正如我们将看到的，CUDA编程接口旨在覆盖更大范围的令人兴奋的应用程序的桃肉部分。并行编程模型及其底层硬件仍在快速发展，以便能够高效并行化更大部分的应用程序。
+
+## 1.4 并行编程的挑战
+
+是什么让并行编程变得困难？曾有人说，如果你不关心性能，并行编程是非常容易的。你可以在一个小时内写出一个并行程序。但如果你不关心性能，为什么还要写一个并行程序呢？
+
+本书将讨论在实现高性能并行编程时面临的几个挑战。首先，设计具有与顺序算法相同水平的算法复杂度的并行算法可能具有挑战性。许多并行算法执行的工作量与其顺序算法相同。然而，有些并行算法的工作量比其顺序算法更多。实际上，有时它们可能会执行更多的工作，以至于在处理大输入数据集时反而运行得更慢。这尤其是一个问题，因为快速处理大输入数据集是并行编程的重要动机。
+
+例如，许多现实世界的问题最自然的描述是通过数学递归。并行化这些问题通常需要非直观的思考方式，并且在执行过程中可能需要冗余工作。有一些重要的算法原语，如前缀和，可以促进将问题的顺序、递归形式转化为更并行的形式。我们将在第11章“前缀和（扫描）”中更正式地介绍工作效率的概念，并使用重要的并行模式如前缀和来说明设计与其顺序算法具有相同计算复杂度的并行算法所涉及的方法和权衡。
+
+其次，许多应用程序的执行速度受到内存访问延迟和/或吞吐量的限制。我们将这些应用程序称为内存绑定应用程序；相比之下，计算绑定应用程序受每字节数据执行的指令数限制。要在内存绑定应用程序中实现高性能并行执行，通常需要提高内存访问速度的方法。我们将在第5章“内存架构和数据局部性”和第6章“性能考虑”中介绍内存访问优化技术，并将在几个章节中应用这些技术来介绍并行模式和应用。
+
+第三，并行程序的执行速度通常比顺序程序对输入数据特性的敏感度更高。许多现实世界的应用程序需要处理具有广泛变化特性的输入，如不规则或不可预测的数据大小和不均匀的数据分布。这些大小和分布的变化会导致并行线程分配不均的工作量，并显著降低并行执行的有效性。
+
+并行程序的性能有时会因这些特性而显著变化。我们将在介绍并行模式和应用的章节中介绍正则化数据分布和/或动态细化线程数的方法，以应对这些挑战。
+
+第四，有些应用程序可以并行化，同时需要线程之间几乎没有合作。这些应用程序通常被称为“令人尴尬的并行”。其他应用程序则需要线程相互协作，这需要使用同步操作如障碍或原子操作。这些同步操作会对应用程序造成开销，因为线程经常会发现自己在等待其他线程而不是执行有用的工作。我们将在本书中讨论减少这些同步开销的各种策略。
+
+幸运的是，大多数这些挑战已经被研究人员解决。跨应用领域存在一些通用模式，使我们可以将一个领域中衍生的解决方案应用于其他领域的挑战。这是我们将在重要的并行计算模式和应用的背景下介绍应对这些挑战的关键技术的主要原因。
