--- a/1_介绍并行运算.md
+++ b/1_介绍并行运算.md
@@ -3,7 +3,7 @@
 * [1.1 异构并行计算](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#11-%E5%BC%82%E6%9E%84%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97)
 * [1.2 为什么需要更高速度或并行性？](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#12-%E4%B8%BA%E4%BB%80%E4%B9%88%E9%9C%80%E8%A6%81%E6%9B%B4%E9%AB%98%E7%9A%84%E9%80%9F%E5%BA%A6%E6%88%96%E5%B9%B6%E8%A1%8C%E6%80%A7)
 * [1.3 加速实际应用](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#13-%E5%8A%A0%E9%80%9F%E5%AE%9E%E9%99%85%E5%BA%94%E7%94%A8%E7%A8%8B%E5%BA%8F)
-* [1.4 并行编程的挑战]()
+* [1.4 并行编程的挑战](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#14-%E5%B9%B6%E8%A1%8C%E7%BC%96%E7%A8%8B%E7%9A%84%E6%8C%91%E6%88%98)
 * [1.5 相关的并行编程接口]
 * [1.6 总体目标]  
 * [1.7 本书的组织结构]
@@ -108,3 +108,31 @@
 第四，有些应用程序可以并行化，同时需要线程之间几乎没有合作。这些应用程序通常被称为“令人尴尬的并行”。其他应用程序则需要线程相互协作，这需要使用同步操作如障碍或原子操作。这些同步操作会对应用程序造成开销，因为线程经常会发现自己在等待其他线程而不是执行有用的工作。我们将在本书中讨论减少这些同步开销的各种策略。
 
 幸运的是，大多数这些挑战已经被研究人员解决。跨应用领域存在一些通用模式，使我们可以将一个领域中衍生的解决方案应用于其他领域的挑战。这是我们将在重要的并行计算模式和应用的背景下介绍应对这些挑战的关键技术的主要原因。
+
+## 1.5 相关的并行编程接口
+
+在过去的几十年中，已经提出了许多并行编程语言和模型（Mattson等，2004）。其中最广泛使用的是用于共享内存多处理器系统的OpenMP（Open，2005）和用于可扩展集群计算的消息传递接口（MPI）（MPI，2009）。这两者都已成为主要计算机厂商支持的标准化编程接口。
+
+一个OpenMP实现包括编译器和运行时。程序员通过向OpenMP编译器指定关于循环的指令（命令）和编译指示（提示）。通过这些指令和编译指示，OpenMP编译器生成并行代码。运行时系统通过管理并行线程和资源来支持并行代码的执行。OpenMP最初是为CPU执行而设计的，后来扩展支持GPU执行。OpenMP的主要优点在于它提供了编译器自动化和运行时支持，抽象掉了许多并行编程细节，使得应用代码在不同厂商生产的系统以及同一厂商不同代的系统之间更具可移植性。我们将这种特性称为性能可移植性。然而，在OpenMP中进行有效编程仍然需要程序员理解所有涉及的并行编程概念。由于CUDA让程序员可以显式控制这些并行编程细节，因此即使对于想要以OpenMP作为主要编程接口的人来说，CUDA也是一个很好的学习工具。此外，根据我们的经验，OpenMP编译器仍在不断发展和改进。许多程序员可能需要使用CUDA风格的接口来处理OpenMP编译器不足的部分。
+
+另一方面，MPI是一个在集群中计算节点不共享内存的编程接口（MPI，2009）。所有数据共享和交互都必须通过显式消息传递来完成。MPI已在高性能计算（HPC）中广泛使用。用MPI编写的应用程序已经成功地在拥有超过100,000个节点的集群计算系统上运行。如今，许多HPC集群使用异构的CPU/GPU节点。由于计算节点之间缺乏共享内存，将应用程序移植到MPI所需的努力可能相当大。程序员需要执行域分解以在各个节点之间分配输入和输出数据。在域分解的基础上，程序员还需要调用消息发送和接收函数来管理节点之间的数据交换。相比之下，CUDA提供了共享内存来在GPU中进行并行执行，以应对这一难题。虽然CUDA是每个节点的有效接口，但大多数应用程序开发人员需要使用MPI在集群级别进行编程。此外，通过NVIDIA集体通信库（NCCL）等API，对多GPU编程的支持也在不断增加。因此，在使用多GPU节点的现代计算集群中进行联合MPI/CUDA编程是HPC并行程序员需要理解的一个重要主题，我们将在第20章“编程异构计算集群”中介绍这个主题。
+
+2009年，包括Apple、Intel、AMD/ATI和NVIDIA在内的几家主要行业公司共同开发了一种称为Open Compute Language（OpenCL）的标准化编程模型（The Khronos Group，2009）。与CUDA类似，OpenCL编程模型定义了语言扩展和运行时API，以允许程序员管理大规模并行处理器中的并行性和数据传递。与CUDA相比，OpenCL更多地依赖API，而较少依赖语言扩展。这使得厂商可以迅速调整其现有的编译器和工具来处理OpenCL程序。OpenCL是一个标准化的编程模型，即用OpenCL开发的应用程序可以在支持OpenCL语言扩展和API的所有处理器上正确运行而无需修改。然而，为了在新处理器上实现高性能，可能需要修改应用程序。
+
+熟悉OpenCL和CUDA的开发者会发现，OpenCL和CUDA的关键概念和特性非常相似。也就是说，CUDA程序员可以以最小的努力学习OpenCL编程。更重要的是，几乎所有在使用CUDA时学到的技术都可以轻松应用于OpenCL编程。
+
+## 1.6 总体目标
+
+我们的主要目标是教会读者如何编程大规模并行处理器以实现高性能。因此，本书的大部分内容致力于开发高性能并行代码的技术。我们的方法不需要大量的硬件专业知识。尽管如此，你仍需要对并行硬件架构有一个良好的概念性理解，以便能够推理你的代码的性能行为。
+
+因此，我们将用一些篇幅来直观理解基本的硬件架构特性，并用大量篇幅来讨论开发高性能并行程序的技术。特别是，我们将重点介绍计算思维（Wing，2006）技术，这些技术将使你能够以适合在大规模并行处理器上高效执行的方式思考问题。
+
+在大多数处理器上进行高性能并行编程需要一些关于硬件工作原理的知识。可能需要多年时间来构建能够使程序员无需这些知识就能开发高性能代码的工具和机器。即使我们拥有这样的工具，我们也怀疑那些了解硬件知识的程序员将比那些不了解硬件知识的程序员更有效地使用这些工具。出于这个原因，我们在第4章“计算架构和调度”中介绍GPU架构的基本原理。我们还在讨论高性能并行编程技术的过程中介绍了更多专业化的架构概念。
+
+我们的第二个目标是教会并行编程的正确功能性和可靠性，这是并行计算中的一个微妙问题。过去在并行系统上工作的程序员知道，取得初步性能还不够。挑战在于以一种你可以调试代码并支持用户的方式来实现它。CUDA编程模型鼓励使用简单的障碍同步、内存一致性和原子性形式来管理并行性。此外，它提供了一系列强大的工具，允许调试不仅是功能方面，还有性能瓶颈。我们将展示，通过专注于数据并行性，可以在一个应用程序中同时实现高性能和高可靠性。
+
+我们的第三个目标是通过探索并行编程的方法来实现未来硬件代际的可扩展性，使得未来更为并行的机器能够比今天的机器更快地运行你的代码。我们希望帮助你掌握并行编程，以便你的程序能够扩展到新一代机器的性能水平。实现这种可扩展性的关键在于使内存数据访问正规化和局部化，以最小化关键资源的消耗和数据结构更新中的冲突。因此，开发高性能并行代码的技术对于确保应用程序未来的可扩展性也非常重要。
+
+为了实现这些目标，需要大量的技术知识，因此我们将在本书中介绍许多并行编程的原理和模式（Mattson等，2004）。我们不会单独教授这些原理和模式。我们将在并行化有用应用程序的背景下教授它们。
+
+尽管我们不能涵盖所有内容，但我们选择了最有用和经过验证的技术来详细介绍。事实上，本版书中关于并行模式的章节数量显著增加。我们现在准备给你一个快速的本书概览。
