--- a/1_介绍并行运算.md
+++ b/1_介绍并行运算.md
@@ -136,3 +136,19 @@
 为了实现这些目标，需要大量的技术知识，因此我们将在本书中介绍许多并行编程的原理和模式（Mattson等，2004）。我们不会单独教授这些原理和模式。我们将在并行化有用应用程序的背景下教授它们。
 
 尽管我们不能涵盖所有内容，但我们选择了最有用和经过验证的技术来详细介绍。事实上，本版书中关于并行模式的章节数量显著增加。我们现在准备给你一个快速的本书概览。
+
+## 1.7 书的组织结构
+
+本书分为四部分。第一部分涵盖并行编程、数据并行性、GPU及性能优化的基本概念。这些基础章节为读者成为GPU程序员提供必要的基本知识和技能。第二部分涵盖原始并行模式，第三部分涵盖更高级的并行模式和应用。这两部分应用第一部分学到的知识和技能，并在需要时引入其他GPU架构特性和优化技术。最后，第四部分介绍高级实践，以完善希望成为专家GPU程序员的读者的知识。
+
+**第一部分：基本概念**包括第2至第6章。第2章《异构数据并行计算》介绍数据并行性和CUDA C编程。该章假定读者有C语言编程经验。首先介绍CUDA C作为C语言的简单扩展，支持异构CPU/GPU计算和广泛使用的单程序多数据并行编程模型。然后，涵盖以下概念：（1）识别应用程序中要并行化的部分，（2）隔离并行代码使用的数据，使用API函数在并行计算设备上分配内存，（3）使用API函数将数据传输到并行计算设备，（4）开发由并行线程执行的内核函数，（5）启动内核函数以由并行线程执行，（6）最终使用API函数将数据传回主处理器。我们使用向量加法作为运行示例来说明这些概念。第3章《多维网格和数据》详细介绍CUDA的并行执行模型，特别是处理多维数据的多维线程组织。第4章《计算架构和调度》介绍GPU架构，重点讨论计算核心的组织和线程在这些核心上的调度执行。讨论了各种架构考虑因素及其对GPU架构上执行代码性能的影响。第5章《内存架构和数据局部性》扩展了第4章的内容，讨论GPU的内存架构以及用于管理数据传递和提高程序执行速度的特殊内存。第6章《性能考虑》介绍当前CUDA硬件中的几个重要性能考虑因素，给出了线程执行和内存访问的理想模式，并提供了常见的优化策略检查清单。
+
+**第二部分：原始并行模式**包括第7至第12章。第7章《卷积》介绍了卷积，这是一种常见的并行计算模式，涉及数字信号处理和计算机视觉，需仔细管理数据访问局部性。第8章《模板》介绍了模板，这是一种类似于卷积但源于求解微分方程的模式，具有独特的优化数据访问局部性的机会。第9章《并行直方图》涵盖了直方图，这是一种广泛用于统计数据分析和大数据集模式识别的模式。第10章《归约与最小化分歧》介绍了归约树模式，用于总结输入数据集合。第11章《前缀和（扫描）》介绍了前缀和或扫描，这是一种将本质上是顺序计算转换为并行计算的重要并行计算模式。第12章《合并》涵盖了并行合并，这是一种在分治工作分配策略中广泛使用的模式。
+
+**第三部分：高级并行模式和应用**与第二部分类似，但涵盖的模式更复杂，通常包含更多的应用背景。这些章节更关注应用特定的考虑因素。第13章《排序》介绍两种形式的并行排序：基数排序和合并排序。第14章《稀疏矩阵计算》介绍了稀疏矩阵计算，广泛用于处理非常大的数据集。第15章《图遍历》介绍了图算法以及如何在GPU编程中高效实现图搜索。第16章《深度学习》涵盖了深度学习，这是GPU计算中变得极为重要的领域。第17章《迭代磁共振成像重建》涵盖了非笛卡尔MRI重建以及如何利用循环融合和散射-聚集转换等技术来增强并行性和减少同步开销。第18章《静电势图》涵盖了分子可视化和分析，利用稀疏矩阵计算中学到的处理不规则数据的技术。第19章《并行编程与计算思维》介绍了计算思维，即以适应高性能计算的方式制定和解决计算问题的艺术。
+
+**第四部分：高级实践**包括第20至第22章。第20章《编程异构计算集群》涵盖了在包含CPU和GPU的异构集群上进行CUDA编程。第21章《CUDA动态并行》涵盖了动态并行，即GPU根据数据或程序结构动态创建工作的能力。第22章《高级实践与未来演变》涵盖了CUDA程序员需了解的一些高级特性和实践。
+
+尽管全书各章均基于CUDA，但它们帮助读者建立并行编程的一般基础。我们相信，通过具体的示例学习概念能让我们最好地理解它们。深入的CUDA经验也使我们能够成熟起来，这将帮助我们学习甚至与CUDA模型无关的概念。
+
+第23章《结论与展望》提供了总结性评语并展望了大规模并行编程的未来。我们首先重温我们的目标并总结各章如何协助实现这些目标。然后，我们预测这些在大规模并行计算中的快速进展将在未来十年内使其成为最令人兴奋的领域之一。
