--- a/1_介绍并行运算.md
+++ b/1_介绍并行运算.md
@@ -18,6 +18,10 @@
 
 相反，随着每一代新微处理器的推出，将继续享有显著性能提高的应用软件将是并行程序，其中多个执行线程合作以更快地完成工作。这种并行程序相对于顺序程序的巨大优势被称为并发革命（Sutter和Larus，2005）。并行编程的实践并不新鲜。高性能计算（HPC）社区已经开发并行程序几十年。这些并行程序通常在昂贵的大型计算机上运行。只有少数精英应用程序可以证明使用这些计算机的合理性，从而将并行编程的实践限制在少数应用开发人员中。现在，所有新微处理器都是并行计算机，需要作为并行程序开发的应用程序数量急剧增加。现在，软件开发人员迫切需要了解并行编程，这是本书的重点。
 
+|:-:|
+|[top](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#17-%E4%B9%A6%E7%9A%84%E7%BB%84%E7%BB%87%E7%BB%93%E6%9E%84)|
+
+
 ## 1.1 异构并行计算
 
 自2003年以来，半导体行业在设计微处理器方面已经确立了两条主要轨迹（Hwu等，2008）。多核轨迹旨在保持顺序程序的执行速度，同时转向多核。多核处理器始于双核处理器，核心数量随着每一代半导体工艺的进步而增加。最近的一个例子是英特尔的多核服务器微处理器，最多可达24个处理器核心，每个核心是一个乱序、多指令发射的处理器，支持超线程，设计旨在最大化顺序程序的执行速度。另一个例子是最近的ARM Ampere多核服务器处理器，有128个处理器核心。
