--- a/1_介绍并行运算.md
+++ b/1_介绍并行运算.md
@@ -19,7 +19,7 @@
 相反，随着每一代新微处理器的推出，将继续享有显著性能提高的应用软件将是并行程序，其中多个执行线程合作以更快地完成工作。这种并行程序相对于顺序程序的巨大优势被称为并发革命（Sutter和Larus，2005）。并行编程的实践并不新鲜。高性能计算（HPC）社区已经开发并行程序几十年。这些并行程序通常在昂贵的大型计算机上运行。只有少数精英应用程序可以证明使用这些计算机的合理性，从而将并行编程的实践限制在少数应用开发人员中。现在，所有新微处理器都是并行计算机，需要作为并行程序开发的应用程序数量急剧增加。现在，软件开发人员迫切需要了解并行编程，这是本书的重点。
 
 |[top](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#%E7%AC%AC%E4%B8%80%E7%AB%A0-%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97)|
-|:-:|
+|-|
 
 
 ## 1.1 异构并行计算
@@ -57,6 +57,9 @@
 
 尽管GPU是异构并行计算中的一个重要计算设备类别，但还有其他重要类型的计算设备在异构计算系统中用作加速器。例如，现场可编程门阵列（FPGA）已被广泛用于加速网络应用。本书中使用GPU作为学习工具所介绍的技术同样适用于这些加速器的编程任务。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#%E7%AC%AC%E4%B8%80%E7%AB%A0-%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97)|
+|-|
+
 ## 1.2 为什么需要更高的速度或并行性？
 
 正如我们在第1.1节所述，大规模并行编程的主要动机是使应用程序在未来的硬件世代中享受持续的速度提升。正如我们将在并行模式、高级模式和应用程序（第II部分和第III部分，第7至第19章）中讨论的那样，当一个应用程序适合并行执行时，GPU上的良好实现可以比在单个CPU核心上顺序执行的速度提升超过100倍。如果应用程序包含我们所称的“数据并行性”，通常只需几个小时的工作即可实现103倍的速度提升。
@@ -74,6 +77,9 @@
 我们提到的所有新应用程序都涉及以不同方式和在不同级别模拟和/或表示物理和并发世界，并处理大量数据。处理这种庞大的数据量时，许多计算可以并行进行，尽管在某些时候需要进行整合。在大多数情况下，有效管理数据传输对并行应用程序的可实现速度有重大影响。尽管每天处理这些应用的少数专家通常熟知这些技术，但大多数应用程序开发人员可以从对这些技术的更直观理解和实际操作知识中受益。
 
 我们旨在以直观的方式向正式教育可能不是计算机科学或计算机工程的应用程序开发人员介绍数据管理技术。我们还旨在提供许多实用的代码示例和动手练习，以帮助读者获取工作知识，这需要一种实用的编程模型，促进并行实现并支持适当的数据传输管理。CUDA提供了这样一种编程模型，并已被庞大的开发者社区充分测试。
+
+|[top](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#%E7%AC%AC%E4%B8%80%E7%AB%A0-%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97)|
+|-|
 
 ## 1.3 加速实际应用程序
 
@@ -95,6 +101,9 @@
 
 接下来是我们称之为“桃肉”的部分。这些部分很容易并行化，早期的一些图形应用程序也是如此。在异构计算系统中进行并行编程可以显著提高这些应用程序的速度。如图1.2所示，早期的GPGPU编程接口仅覆盖桃肉部分的一小部分，这类似于一些最令人兴奋的应用程序的小部分。正如我们将看到的，CUDA编程接口旨在覆盖更大范围的令人兴奋的应用程序的桃肉部分。并行编程模型及其底层硬件仍在快速发展，以便能够高效并行化更大部分的应用程序。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#%E7%AC%AC%E4%B8%80%E7%AB%A0-%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97)|
+|-|
+
 ## 1.4 并行编程的挑战
 
 是什么让并行编程变得困难？曾有人说，如果你不关心性能，并行编程是非常容易的。你可以在一个小时内写出一个并行程序。但如果你不关心性能，为什么还要写一个并行程序呢？
@@ -113,6 +122,9 @@
 
 幸运的是，大多数这些挑战已经被研究人员解决。跨应用领域存在一些通用模式，使我们可以将一个领域中衍生的解决方案应用于其他领域的挑战。这是我们将在重要的并行计算模式和应用的背景下介绍应对这些挑战的关键技术的主要原因。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#%E7%AC%AC%E4%B8%80%E7%AB%A0-%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97)|
+|-|
+
 ## 1.5 相关的并行编程接口
 
 在过去的几十年中，已经提出了许多并行编程语言和模型（Mattson等，2004）。其中最广泛使用的是用于共享内存多处理器系统的OpenMP（Open，2005）和用于可扩展集群计算的消息传递接口（MPI）（MPI，2009）。这两者都已成为主要计算机厂商支持的标准化编程接口。
@@ -124,6 +136,9 @@
 2009年，包括Apple、Intel、AMD/ATI和NVIDIA在内的几家主要行业公司共同开发了一种称为Open Compute Language（OpenCL）的标准化编程模型（The Khronos Group，2009）。与CUDA类似，OpenCL编程模型定义了语言扩展和运行时API，以允许程序员管理大规模并行处理器中的并行性和数据传递。与CUDA相比，OpenCL更多地依赖API，而较少依赖语言扩展。这使得厂商可以迅速调整其现有的编译器和工具来处理OpenCL程序。OpenCL是一个标准化的编程模型，即用OpenCL开发的应用程序可以在支持OpenCL语言扩展和API的所有处理器上正确运行而无需修改。然而，为了在新处理器上实现高性能，可能需要修改应用程序。
 
 熟悉OpenCL和CUDA的开发者会发现，OpenCL和CUDA的关键概念和特性非常相似。也就是说，CUDA程序员可以以最小的努力学习OpenCL编程。更重要的是，几乎所有在使用CUDA时学到的技术都可以轻松应用于OpenCL编程。
+
+|[top](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#%E7%AC%AC%E4%B8%80%E7%AB%A0-%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97)|
+|-|
 
 ## 1.6 总体目标
 
@@ -141,6 +156,9 @@
 
 尽管我们不能涵盖所有内容，但我们选择了最有用和经过验证的技术来详细介绍。事实上，本版书中关于并行模式的章节数量显著增加。我们现在准备给你一个快速的本书概览。
 
+|[top](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#%E7%AC%AC%E4%B8%80%E7%AB%A0-%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97)|
+|-|
+
 ## 1.7 书的组织结构
 
 本书分为四部分。第一部分涵盖并行编程、数据并行性、GPU及性能优化的基本概念。这些基础章节为读者成为GPU程序员提供必要的基本知识和技能。第二部分涵盖原始并行模式，第三部分涵盖更高级的并行模式和应用。这两部分应用第一部分学到的知识和技能，并在需要时引入其他GPU架构特性和优化技术。最后，第四部分介绍高级实践，以完善希望成为专家GPU程序员的读者的知识。
@@ -156,3 +174,6 @@
 尽管全书各章均基于CUDA，但它们帮助读者建立并行编程的一般基础。我们相信，通过具体的示例学习概念能让我们最好地理解它们。深入的CUDA经验也使我们能够成熟起来，这将帮助我们学习甚至与CUDA模型无关的概念。
 
 第23章《结论与展望》提供了总结性评语并展望了大规模并行编程的未来。我们首先重温我们的目标并总结各章如何协助实现这些目标。然后，我们预测这些在大规模并行计算中的快速进展将在未来十年内使其成为最令人兴奋的领域之一。
+
+|[top](https://github.com/tunglinwood/CUDA/blob/main/1_%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97.md#%E7%AC%AC%E4%B8%80%E7%AB%A0-%E4%BB%8B%E7%BB%8D%E5%B9%B6%E8%A1%8C%E8%BF%90%E7%AE%97)|
+|-|
