--- a/2_异构数据并行计算.md
+++ b/2_异构数据并行计算.md
@@ -1,6 +1,6 @@
 # 2_异构数据并行计算
 
-* [2.1 数据并行性]()
+* [2.1 数据并行性](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md#21-%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E6%80%A7)
 * [2.2 CUDA C程序结构]()
 * [2.3 向量加法内核]()
 * [2.4 设备全局内存和数据传输]()
@@ -29,4 +29,7 @@ $$ L = 0.21r + 0.72g + 0.07b $$
 
 如果我们将输入视为一个由RGB值组成的数组I，而输出视为相应的亮度值数组O，我们将得到如图2.2所示的简单计算结构。例如，O[0]是通过根据上述公式计算I[0]中的RGB值的加权和生成的；O[1]是通过计算I[1]中的RGB值的加权和生成的；O[2]是通过计算I[2]中的RGB值的加权和生成的；依此类推。这些每像素的计算彼此之间没有依赖关系。所有这些计算都可以独立进行。显然，颜色到灰度的转换表现出丰富的数据并行性。当然，完整应用中的数据并行性可能更为复杂，本书的大部分内容都致力于教授找到和利用数据并行性所需的并行思维。
 
-> 
+> 任务并行与数据并行
+数据并行不是并行编程中唯一使用的并行类型。任务并行在并行编程中也被广泛使用。任务并行通常通过应用程序的任务分解来实现。例如，一个简单的应用程序可能需要进行向量加法和矩阵向量乘法。每一个都是一个任务。如果这两个任务可以独立完成，就存在任务并行性。I/O和数据传输也是常见的任务来源。
+在大型应用程序中，通常有大量的独立任务，因此有大量的任务并行性。例如，在一个分子动力学模拟器中，自然任务的列表包括振动力、旋转力、非键合力的邻居识别、非键合力、速度和位置、以及基于速度和位置的其他物理属性。
+一般而言，数据并行是并行程序可扩展性的主要来源。对于大数据集，通常可以找到丰富的数据并行性，从而能够利用大规模并行处理器，并随着每一代拥有更多执行资源的硬件的发展提升应用性能。然而，任务并行在实现性能目标方面也可以发挥重要作用。当我们介绍流（streams）时，将会进一步讨论任务并行性。
