--- a/2_异构数据并行计算.md
+++ b/2_异构数据并行计算.md
@@ -124,6 +124,45 @@ void vecAdd(float* A, float* B, float* C, int n) {
 
 请注意，修改后的`vecAdd`函数实际上是一个外包代理，它将输入数据传输到设备，激活设备上的计算，并从设备收集结果。代理以这样一种方式进行，使得主程序甚至不需要知道向量加法现在实际上是在设备上完成的。实际上，由于所有数据来回复制，这种“透明”的外包模型可能非常低效。人们通常会将大型和重要的数据结构保留在设备上，并简单地从主机代码调用设备函数。然而，现在我们将使用简化的透明模型来介绍基本的CUDA C程序结构。修订函数的详细信息以及内核函数的组成方式将是本章其余部分的主题。
 
+## 2.4 设备全局内存和数据传输
+在当前的 CUDA 系统中，设备通常是带有自己动态随机存取存储器（DRAM）的硬件卡，这种内存被称为设备全局内存，简称为全局内存。例如，NVIDIA Volta V100 带有 16GB 或 32GB 的全局内存。称其为“全局”内存是为了将其与其他类型的设备内存区分开来，其他类型的设备内存也对程序员可访问。关于 CUDA 内存模型和不同类型设备内存的详细信息将在第 5 章“内存架构和数据局部性”中讨论。
 
+对于向量加法内核，在调用内核之前，程序员需要在设备全局内存中分配空间，并将数据从主机内存传输到设备全局内存中的分配空间。这对应于图 2.5 的第 1 部分。同样，在设备执行之后，程序员需要将结果数据从设备全局内存传输回主机内存，并释放设备全局内存中不再需要的分配空间。这对应于图 2.5 的第 3 部分。CUDA 运行时系统（通常在主机上运行）提供了应用程序编程接口（API）函数来代表程序员执行这些活动。从此以后，我们将简单地说数据从主机传输到设备，作为数据从主机内存复制到设备全局内存的简写。相同的适用于相反方向。
+
+在图 2.5 中，`vecAdd` 函数的第 1 部分和第 3 部分需要使用 CUDA API 函数来分配设备全局内存用于 A、B 和 C；将 A 和 B 从主机传输到设备；在向量加法之后将 C 从设备传输到主机；并释放 A、B 和 C 的设备全局内存。我们将首先解释内存分配和释放函数。
+
+图 2.6 显示了两个用于分配和释放设备全局内存的 API 函数。
+`cudaMalloc` 函数可以从主机代码中调用，以为对象分配一块设备全局内存。读者应该注意到 `cudaMalloc` 和标准 C 运行时库 malloc 函数之间的惊人相似性。这是有意为之的；CUDA C 是 C 的最小扩展版。CUDA C 使用标准 C 运行时库 malloc 函数来管理主机内存，并将 `cudaMalloc` 作为对 C 运行时库的扩展。通过尽可能接近原始 C 运行时库的接口，CUDA C 最小化了 C 程序员重新学习这些扩展的时间。
+
+`cudaMalloc` 函数的第一个参数是指针变量的地址，该变量将被设置为指向分配的对象。指针变量的地址应该被强制转换为 (void **) 类型，因为函数期望一个通用指针；内存分配函数是一个通用函数，不受限于任何特定类型的对象。这个参数允许 `cudaMalloc` 函数将分配的内存地址写入提供的指针变量中，而不管其类型如何。调用内核的主机代码将此指针值传递给需要访问分配内存对象的内核。`cudaMalloc` 函数的第二个参数给出了要分配的数据大小，以字节数表示。这个第二个参数的使用与 C 的 malloc 函数的 size 参数一致。
+
+我们现在用以下简单代码示例来说明 `cudaMalloc` 和 `cudaFree` 的使用：
+
+```cuda
+float *A_d
+int size=n*sizeof(float);
+cudaMalloc((void**)&`A_d`, size);
+. . .
+cudaFree(A_d);
+```
+
+这是图 2.5 中示例的延续。为了清晰起见，我们给指针变量加上后缀“_d”，以表明它指向设备全局内存中的对象。传递给 `cudaMalloc` 的第一个参数是指针 `A_d` 的地址（即 `&A_d`）并强制转换为 void 指针。当 `cudaMalloc` 返回时，`A_d` 将指向为 A 向量分配的设备全局内存区域。传递给 `cudaMalloc` 的第二个参数是要分配的区域大小。
+由于 size 是以字节数表示的，程序员在确定 size 的值时需要将数组中的元素数量转换为字节数。例如，在为包含 n 个单精度浮点元素的数组分配空间时，size 的值将是 n 乘以单精度浮点数的大小，在当前计算机中为 4 字节。因此 size 的值将是 n*4。在计算完成后，调用 `cudaFree` 并以指针 `A_d` 作为参数来释放 A 向量在设备全局内存中的存储空间。
+注意 `cudaFree` 不需要改变 `A_d` 的值；它只需要使用 `A_d` 的值将分配的内存返回到可用池。因此，只有 `A_d` 的值而不是地址作为参数传递。`A_d`、`B_d` 和 `C_d` 中的地址指向设备全局内存中的位置。这些地址不应该在主机代码中取消引用。它们应该用于调用 API 函数和内核函数。在主机代码中取消引用设备全局内存指针可能会导致异常或其他类型的运行时错误。
+读者应该用 `B_d` 和 `C_d` 指针变量的类似声明以及相应的 `cudaMalloc` 调用来完成图 2.5 中 `vecAdd` 示例的第 1 部分。此外，图 2.5 中的第 3 部分可以用 `cudaFree` 调用 `B_d` 和 `C_d` 来完成。
+一旦主机代码在设备全局内存中为数据对象分配了空间，它就可以请求将数据从主机传输到设备。这是通过调用 CUDA API 函数之一来实现的。图 2.7 显示了这样一个 API 函数 `cudaMemcpy`。`cudaMemcpy` 函数接受四个参数。第一个参数是指向要复制的数据对象的目标位置的指针。第二个参数指向源位置。第三个参数指定要复制的字节数。第四个参数指示涉及复制的内存类型：从主机到主机、从主机到设备、从设备到主机以及从设备到设备。例如，内存复制函数可以用来将数据从设备全局内存中的一个位置复制到设备全局内存中的另一个位置。`vecAdd` 函数在向量加法之前调用 `cudaMemcpy` 函数将 `A_h` 和 `B_h` 向量从主机内存复制到设备内存中的 `A_d` 和 `B_d`，并在加法完成后将 `C_d` 向量从设备内存复制到主机内存中的 `C_h`。假设 `A_h`、`B_h`、`A_d`、`B_d` 和 size 的值已经设置，如前所述，下面是三个 `cudaMemcpy` 调用。两个符号常量 `cudaMemcpyHostToDevice` 和 `cudaMemcpyDeviceToHost` 是 CUDA 编程环境中已识别的预定义常量。注意，通过适当排列源指针和目标指针并使用适当的传输类型常量，可以使用相同的函数在两个方向上传输数据。
+
+```cuda
+cudaMemcpy(A_d, A_h, size, cudaMemcpyHostToDevice);
+cudaMemcpy(B_d, B_h, size, cudaMemcpyHostToDevice);
+...
+cudaMemcpy(C_h, C_d, size, cudaMemcpyDeviceToHost);
+```
+
+总而言之，图 2.4 中的主程序调用 `vecAdd`，该函数也在主机上执行。图 2.5 中概述的 `vecAdd` 函数在设备全局内存中分配空间，请求数据传输，并调用执行实际向量加法的内核。我们将这种类型的主机代码称为调用内核的存根。我们在图 2.8 中展示了 `vecAdd` 函数的更完整版本。
+与图 2.5 相比，图 2.8 中的 `vecAdd` 函数在第 1 部分和第 3 部分是完整的。第 1 部分为 `A_d`、`B_d` 和 `C_d` 分配设备全局内存，并将 `A_h` 传输到 `A_d`，将 `B_h` 传输到 `B_d`。这是通过调用 `cudaMalloc` 和 `cudaMemcpy` 函数来完成的。读者被鼓励编写自己的函数调用并填写适当的参数值，并将他们的代码与图 2.8 中显示的代码进行比较。
+第 2 部分调用内核，将在以下
+
+小节中描述。第 3 部分将向量和数据从设备复制到主机，以便这些值在主函数中可用。这是通过调用 `cudaMemcpy` 函数来完成的。然后它通过调用 `cudaFree` 函数释放设备全局内存中的 `A_d`、`B_d` 和 `C_d` 的内存（图 2.9）。
 
 
