--- a/2_异构数据并行计算.md
+++ b/2_异构数据并行计算.md
@@ -131,6 +131,18 @@ void vecAdd(float* A, float* B, float* C, int n) {
 
 在图 2.5 中，`vecAdd` 函数的第 1 部分和第 3 部分需要使用 CUDA API 函数来分配设备全局内存用于 A、B 和 C；将 A 和 B 从主机传输到设备；在向量加法之后将 C 从设备传输到主机；并释放 A、B 和 C 的设备全局内存。我们将首先解释内存分配和释放函数。
 
+`cudaMalloc()`：
+- **用途**：在设备（GPU）全局内存中分配内存。
+- **参数**：
+  1. 指向已分配对象的指针的地址：这是一个指向指针的指针（`void**`），将被设置为指向设备上分配的内存。
+  2. 以字节为单位的已分配对象的大小：指定要分配多少内存，以字节为单位。
+
+`cudaFree()`：
+- **用途**：释放在设备（GPU）全局内存中分配的内存。
+- **参数**：
+  - 被释放对象的指针：接受一个指针，该指针指向先前用`cudaMalloc()`分配的内存。它不会更改指针本身的值，但会释放它所指向的内存。
+> 图 2.6 cudaMalloc, cudaFree是CUDA编程中管理GPU内存的关键，允许在并行计算期间高效地进行数据传输和资源利用。
+
 图 2.6 显示了两个用于分配和释放设备全局内存的 API 函数。
 `cudaMalloc` 函数可以从主机代码中调用，以为对象分配一块设备全局内存。读者应该注意到 `cudaMalloc` 和标准 C 运行时库 malloc 函数之间的惊人相似性。这是有意为之的；CUDA C 是 C 的最小扩展版。CUDA C 使用标准 C 运行时库 malloc 函数来管理主机内存，并将 `cudaMalloc` 作为对 C 运行时库的扩展。通过尽可能接近原始 C 运行时库的接口，CUDA C 最小化了 C 程序员重新学习这些扩展的时间。
 
@@ -150,6 +162,16 @@ cudaFree(A_d);
 由于 size 是以字节数表示的，程序员在确定 size 的值时需要将数组中的元素数量转换为字节数。例如，在为包含 n 个单精度浮点元素的数组分配空间时，size 的值将是 n 乘以单精度浮点数的大小，在当前计算机中为 4 字节。因此 size 的值将是 n*4。在计算完成后，调用 `cudaFree` 并以指针 `A_d` 作为参数来释放 A 向量在设备全局内存中的存储空间。
 注意 `cudaFree` 不需要改变 `A_d` 的值；它只需要使用 `A_d` 的值将分配的内存返回到可用池。因此，只有 `A_d` 的值而不是地址作为参数传递。`A_d`、`B_d` 和 `C_d` 中的地址指向设备全局内存中的位置。这些地址不应该在主机代码中取消引用。它们应该用于调用 API 函数和内核函数。在主机代码中取消引用设备全局内存指针可能会导致异常或其他类型的运行时错误。
 读者应该用 `B_d` 和 `C_d` 指针变量的类似声明以及相应的 `cudaMalloc` 调用来完成图 2.5 中 `vecAdd` 示例的第 1 部分。此外，图 2.5 中的第 3 部分可以用 `cudaFree` 调用 `B_d` 和 `C_d` 来完成。
+
+`cudaMemcpy()`：
+- **用途**：用于在主机（CPU）和设备（GPU）之间传输内存数据。
+- **参数**：
+  1. 目标地址的指针：指向要将数据复制到的目标位置。
+  2. 源地址的指针：指向要从中复制数据的源位置。
+  3. 复制的字节数：指定要复制的数据量，以字节为单位。
+  4. 传输类型/方向：指定数据传输的类型或方向，如从主机到设备（`cudaMemcpyHostToDevice`），从设备到主机（`cudaMemcpyDeviceToHost`），或在设备内存之间传输（`cudaMemcpyDeviceToDevice`）。
+> 图 2.7 cudaMemcpy 宿主与设备之间的API 函数
+
 一旦主机代码在设备全局内存中为数据对象分配了空间，它就可以请求将数据从主机传输到设备。这是通过调用 CUDA API 函数之一来实现的。图 2.7 显示了这样一个 API 函数 `cudaMemcpy`。`cudaMemcpy` 函数接受四个参数。第一个参数是指向要复制的数据对象的目标位置的指针。第二个参数指向源位置。第三个参数指定要复制的字节数。第四个参数指示涉及复制的内存类型：从主机到主机、从主机到设备、从设备到主机以及从设备到设备。例如，内存复制函数可以用来将数据从设备全局内存中的一个位置复制到设备全局内存中的另一个位置。`vecAdd` 函数在向量加法之前调用 `cudaMemcpy` 函数将 `A_h` 和 `B_h` 向量从主机内存复制到设备内存中的 `A_d` 和 `B_d`，并在加法完成后将 `C_d` 向量从设备内存复制到主机内存中的 `C_h`。假设 `A_h`、`B_h`、`A_d`、`B_d` 和 size 的值已经设置，如前所述，下面是三个 `cudaMemcpy` 调用。两个符号常量 `cudaMemcpyHostToDevice` 和 `cudaMemcpyDeviceToHost` 是 CUDA 编程环境中已识别的预定义常量。注意，通过适当排列源指针和目标指针并使用适当的传输类型常量，可以使用相同的函数在两个方向上传输数据。
 
 ```cuda
@@ -159,10 +181,32 @@ cudaMemcpy(B_d, B_h, size, cudaMemcpyHostToDevice);
 cudaMemcpy(C_h, C_d, size, cudaMemcpyDeviceToHost);
 ```
 
+```cuda
+01 void vecAdd(float* A_h, float* B_h, float* C_h, int n) {
+02     int size = n * sizeof(float); // 计算需要分配的内存大小（字节数）
+03     float *A_d, *B_d, *C_d; // 定义指向设备内存的指针
+04
+05     cudaMalloc((void **) &A_d, size); // 在设备内存中分配空间给向量 A
+06     cudaMalloc((void **) &B_d, size); // 在设备内存中分配空间给向量 B
+07     cudaMalloc((void **) &C_d, size); // 在设备内存中分配空间给向量 C
+08
+09     cudaMemcpy(A_d, A_h, size, cudaMemcpyHostToDevice); // 从主机内存复制向量 A 到设备内存
+10     cudaMemcpy(B_d, B_h, size, cudaMemcpyHostToDevice); // 从主机内存复制向量 B 到设备内存
+11
+12     // 调用内核代码 – 将在后面展示
+13     ...
+14
+15     cudaMemcpy(C_h, C_d, size, cudaMemcpyDeviceToHost); // 从设备内存复制向量 C 到主机内存
+16
+17     cudaFree(A_d); // 释放设备内存中分配给向量 A 的空间
+18     cudaFree(B_d); // 释放设备内存中分配给向量 B 的空间
+19     cudaFree(C_d); // 释放设备内存中分配给向量 C 的空间
+20 }
+
+```
+
 总而言之，图 2.4 中的主程序调用 `vecAdd`，该函数也在主机上执行。图 2.5 中概述的 `vecAdd` 函数在设备全局内存中分配空间，请求数据传输，并调用执行实际向量加法的内核。我们将这种类型的主机代码称为调用内核的存根。我们在图 2.8 中展示了 `vecAdd` 函数的更完整版本。
 与图 2.5 相比，图 2.8 中的 `vecAdd` 函数在第 1 部分和第 3 部分是完整的。第 1 部分为 `A_d`、`B_d` 和 `C_d` 分配设备全局内存，并将 `A_h` 传输到 `A_d`，将 `B_h` 传输到 `B_d`。这是通过调用 `cudaMalloc` 和 `cudaMemcpy` 函数来完成的。读者被鼓励编写自己的函数调用并填写适当的参数值，并将他们的代码与图 2.8 中显示的代码进行比较。
-第 2 部分调用内核，将在以下
-
-小节中描述。第 3 部分将向量和数据从设备复制到主机，以便这些值在主函数中可用。这是通过调用 `cudaMemcpy` 函数来完成的。然后它通过调用 `cudaFree` 函数释放设备全局内存中的 `A_d`、`B_d` 和 `C_d` 的内存（图 2.9）。
+第 2 部分调用内核，将在以下小节中描述。第 3 部分将向量和数据从设备复制到主机，以便这些值在主函数中可用。这是通过调用 `cudaMemcpy` 函数来完成的。然后它通过调用 `cudaFree` 函数释放设备全局内存中的 `A_d`、`B_d` 和 `C_d` 的内存（图 2.9）。
 
 
