--- a/2_异构数据并行计算.md
+++ b/2_异构数据并行计算.md
@@ -202,8 +202,8 @@ cudaMemcpy(C_h, C_d, size, cudaMemcpyDeviceToHost);
 18     cudaFree(B_d); // 释放设备内存中分配给向量 B 的空间
 19     cudaFree(C_d); // 释放设备内存中分配给向量 C 的空间
 20 }
-
 ```
+> 图 2.8 完整`vecAdd()`的示例
 
 总而言之，图 2.4 中的主程序调用 `vecAdd`，该函数也在主机上执行。图 2.5 中概述的 `vecAdd` 函数在设备全局内存中分配空间，请求数据传输，并调用执行实际向量加法的内核。我们将这种类型的主机代码称为调用内核的存根。我们在图 2.8 中展示了 `vecAdd` 函数的更完整版本。
 与图 2.5 相比，图 2.8 中的 `vecAdd` 函数在第 1 部分和第 3 部分是完整的。第 1 部分为 `A_d`、`B_d` 和 `C_d` 分配设备全局内存，并将 `A_h` 传输到 `A_d`，将 `B_h` 传输到 `B_d`。这是通过调用 `cudaMalloc` 和 `cudaMemcpy` 函数来完成的。读者被鼓励编写自己的函数调用并填写适当的参数值，并将他们的代码与图 2.8 中显示的代码进行比较。
