--- a/2_异构数据并行计算.md
+++ b/2_异构数据并行计算.md
@@ -1,7 +1,7 @@
 # 2_异构数据并行计算
 
 * [2.1 数据并行性](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md#21-%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E6%80%A7)
-* [2.2 CUDA C程序结构]()
+* [2.2 CUDA C程序结构](https://github.com/tunglinwood/CUDA/blob/main/2_%E5%BC%82%E6%9E%84%E6%95%B0%E6%8D%AE%E5%B9%B6%E8%A1%8C%E8%AE%A1%E7%AE%97.md#22-cuda-c%E7%A8%8B%E5%BA%8F%E7%BB%93%E6%9E%84)
 * [2.3 向量加法内核]()
 * [2.4 设备全局内存和数据传输]()
 * [2.5 内核函数和线程]()
@@ -208,5 +208,26 @@ cudaMemcpy(C_h, C_d, size, cudaMemcpyDeviceToHost);
 总而言之，图 2.4 中的主程序调用 `vecAdd`，该函数也在主机上执行。图 2.5 中概述的 `vecAdd` 函数在设备全局内存中分配空间，请求数据传输，并调用执行实际向量加法的内核。我们将这种类型的主机代码称为调用内核的存根。我们在图 2.8 中展示了 `vecAdd` 函数的更完整版本。
 与图 2.5 相比，图 2.8 中的 `vecAdd` 函数在第 1 部分和第 3 部分是完整的。第 1 部分为 `A_d`、`B_d` 和 `C_d` 分配设备全局内存，并将 `A_h` 传输到 `A_d`，将 `B_h` 传输到 `B_d`。这是通过调用 `cudaMalloc` 和 `cudaMemcpy` 函数来完成的。读者被鼓励编写自己的函数调用并填写适当的参数值，并将他们的代码与图 2.8 中显示的代码进行比较。
 第 2 部分调用内核，将在以下小节中描述。第 3 部分将向量和数据从设备复制到主机，以便这些值在主函数中可用。这是通过调用 `cudaMemcpy` 函数来完成的。然后它通过调用 `cudaFree` 函数释放设备全局内存中的 `A_d`、`B_d` 和 `C_d` 的内存（图 2.9）。
+
+> ### CUDA 中的错误检查和处理
+>在程序中进行错误检查和处理非常重要。CUDA API 函数会返回标志，指示在处理请求时是否发生了错误。大多数错误是由于调用中使用了不适当的参数值造成的。
+>为了简洁起见，我们在示例中不会显示错误检查代码。然而，在实际使用中，我们应该在函数调用周围添加代码来测试错误条件，并打印错误信息，以便用户能意识到错误的发生。以下是一个简单的错误检查代码示例：
+>
+>> ```shell
+>> cudaError_t err = cudaMalloc((void**) &A_d, size);
+>> if (err != cudaSuccess) {
+>>    printf("%s in %s at line %d\n", cudaGetErrorString(err), __FILE__, __LINE__);
+>>    exit(EXIT_FAILURE);
+>> }
+>> ```
+> ### 代码解释
+>1. **错误检查**：
+>   `cudaError_t err = cudaMalloc((void**) &A_d, size);`：调用 `cudaMalloc` 函数，并将返回的错误码存储在 `err` 中。
+> 2. **检查错误**：
+>   `if (err != cudaSuccess)`：检查 `err` 是否表示成功。如果不是，说明发生了错误。
+> 3. **打印错误信息**：
+>   `printf("%s in %s at line %d\n", cudaGetErrorString(err), __FILE__, __LINE__);`：打印错误信息。`cudaGetErrorString(err)` 会返回错误的详细描述。`__FILE__` 和 `__LINE__` 分别表示出错的文件名和行号。
+> 4. **退出程序**：
+>   `exit(EXIT_FAILURE);`：如果发生错误，退出程序并返回失败状态。
 
 
