--- a/2_异构数据并行计算.md
+++ b/2_异构数据并行计算.md
@@ -230,4 +230,62 @@ cudaMemcpy(C_h, C_d, size, cudaMemcpyDeviceToHost);
 > 4. **退出程序**：
 >   `exit(EXIT_FAILURE);`：如果发生错误，退出程序并返回失败状态。
 
+## 2.5 内核函数和线程
 
+现在我们可以更深入地讨论 CUDA C 的内核函数以及调用这些内核函数的效果。在 CUDA C 中，内核函数指定了在并行阶段由所有线程执行的代码。由于所有这些线程执行相同的代码，CUDA C 编程是一种单程序多数据（SPMD）并行编程风格的实例，这是一种在并行计算系统中非常流行的编程风格。
+
+当程序的主机代码调用内核时，CUDA 运行时系统会启动一个线程网格，该网格组织成两级层次结构。每个网格被组织为线程块的数组，我们将简化地称之为块。每个网格的所有块大小相同；在当前系统中，每个块最多可以包含 1024 个线程。图 2.9 显示了一个示例，其中每个块包含 256 个线程。每个线程由一个带有线程索引的方框表示。
+
+> ### 内置变量
+> 许多编程语言都有内置变量，这些变量具有特殊的含义和目的。这些变量的值通常由运行时系统预初始化，并且在程序中通常是只读的。程序员应避免将这些变量重新定义为其他用途。
+> 每个线程块中的线程总数由主机代码在调用内核时指定。相同的内核可以在主机代码的不同部分使用不同数量的线程进行调用。对于给定的线程网格，线程块中的线程数量可以通过一个名为 `blockDim` 的内置变量获得。
+
+![image](https://github.com/user-attachments/assets/e7c155b4-4164-44b5-bfce-833ff2fe2124)
+> 图 2.9 计算全局索引
+`blockDim` 变量是一个包含三个无符号整数字段（x、y 和 z）的结构，帮助程序员将线程组织成一维、二维或三维数组。对于一维组织，只使用 x 字段。对于二维组织，使用 x 和 y 字段。对于三维结构，使用 x、y 和 z 三个字段。选择线程组织的维度通常反映了数据的维度。这是因为线程的创建目的是并行处理数据，因此线程的组织反映了数据的组织。在图 2.9 中，由于数据是一维向量，每个线程块组织为一维线程数组。`blockDim.x` 变量的值表示每个块中的线程总数，在图 2.9 中为 256。通常建议线程块中每个维度的线程数量是 32 的倍数，以提高硬件效率。我们将在后面详细讨论这一点。
+
+CUDA 内核具有两个额外的内置变量（`threadIdx` 和 `blockIdx`），允许线程相互区分并确定每个线程处理的数据区域。`threadIdx` 变量为每个线程提供一个在块内的唯一坐标。在图 2.9 中，由于我们使用的是一维线程组织，只使用 `threadIdx.x`。图 2.9 中每个线程的 `threadIdx.x` 值显示在小的阴影框中。每个块中的第一个线程的 `threadIdx.x` 值为 0，第二个线程的值为 1，第三个线程的值为 2，依此类推。
+
+> ### 层次结构组织
+> 像 CUDA 线程一样，许多现实世界的系统也是以层次结构组织的。例如，美国电话系统就是一个很好的例子。在顶层，电话系统由“区域”组成，每个区域对应一个地理区域。相同区域内的所有电话线都具有相同的 3 位“区域代码”。一个电话区域有时比一个城市还大。例如，伊利诺伊州中部的许多县和城市都在同一个电话区域内，共享相同的区域代码 217。在一个区域内，每条电话线都有一个七位数的本地电话号码，这允许每个区域最多有大约一千万个号码。
+> 可以将每条电话线视为一个 CUDA 线程，将区域代码视为 `blockIdx` 的值，将七位数的本地号码视为 `threadIdx` 的值。这种层次结构组织允许系统拥有非常多的电话线，同时保持“局部性”以拨打相同区域的电话。也就是说，当拨打同一区域的电话时，呼叫者只需拨打本地号码。只要我们大多数通话在本地区域内，就很少需要拨打区域代码。如果偶尔需要拨打另一个区域的电话，我们拨打 1 和区域代码，然后是本地号码。（这就是为什么任何区域的本地号码都不应以 1 开头的原因。）CUDA 线程的层次结构组织也提供了一种局部性。我们将很快研究这种局部性。
+
+`blockIdx` 变量为块中的所有线程提供一个公共的块坐标。在图 2.9 中，第一个块中的所有线程在 `blockIdx.x` 变量中都有值 0，第二个线程块中的线程值为 1，以此类推。使用电话系统的类比，可以将 `threadIdx.x` 视为本地电话号码，将 `blockIdx.x` 视为区域代码。两者结合为整个国家的每个电话线提供一个唯一的电话号码。类似地，每个线程可以将其 `threadIdx` 和 `blockIdx` 值组合起来，在整个网格中为自己创建一个唯一的全局索引。
+
+在图 2.9 中，一个唯一的全局索引 i 计算为 `i = blockIdx.x * blockDim.x + threadIdx.x`。回忆一下，我们的示例中 `blockDim` 为 256。块 0 中线程的 i 值范围从 0 到 255，块 1 中线程的 i 值范围从 256 到 511，块 2 中线程的 i 值范围从 512 到 767。也就是说，这三个块中的线程的 i 值形成了从 0 到 767 的连续覆盖。由于每个线程使用 i 来访问 A、B 和 C，这些线程覆盖了原始循环的前 768 次迭代。通过启动更多块的网格，可以处理更大的向量。通过启动一个具有 n 个或更多线程的网格，可以处理长度为 n 的向量。
+
+```cuda
+01 // 计算向量和 C = A + B
+02 // 每个线程执行一对一的加法
+03 __global__
+04 void vecAddKernel(float* A, float* B, float* C, int n) {
+05 int i = threadIdx.x + blockDim.x * blockIdx.x;
+06 if (i < n) {
+07 C[i] = A[i] + B[i];
+08 }
+09 }
+```
+> 图 2.10 `vecAddKernel`向量加法的内核函数
+
+图 2.10 显示了一个向量加法的内核函数。注意，在内核中我们没有使用 “_h” 和 “_d” 的约定，因为没有潜在的混淆。我们在示例中不会访问主机内存。内核的语法是 ANSI C，带有一些显著的扩展。首先，在 `vecAddKernel` 函数声明前有一个 CUDA-C 特定的关键字 `__global__`。这个关键字表示该函数是一个内核，可以被调用以在设备上生成一个线程网格。
+
+![image](https://github.com/user-attachments/assets/1edaec02-2a48-4f8b-b662-8b36dfc7adb5)
+> 图 2.11 CUDA C 内核函数
+
+通常，CUDA C 扩展了 C 语言，使用三个限定词关键字在函数声明中。这些关键字的含义总结在图 2.11 中。`__global__` 关键字表示被声明的函数是一个 CUDA C 内核函数。注意在单词 “global” 的两边各有两个下划线。这样的内核函数在设备上执行，并可以从主机调用。在支持动态并行性的 CUDA 系统中，它还可以从设备上调用，正如我们将在第 21 章 CUDA 动态并行性中看到的。重要的特性是调用这样的内核函数会在设备上启动一个新的线程网格。
+
+`__device__` 关键字表示被声明的函数是一个 CUDA 设备函数。设备函数在 CUDA 设备上执行，只能从内核函数或其他设备函数调用。设备函数由调用它的设备线程执行，不会启动新的设备线程。
+
+`__host__` 关键字表示被声明的函数是一个 CUDA 主机函数。主机函数仅仅是传统的 C 函数，在主机上执行，只能从另一个主机函数调用。默认情况下，如果函数声明中没有任何 CUDA 关键字，则 CUDA 程序中的所有函数都是主机函数。这是合理的，因为许多 CUDA 应用程序是从仅在 CPU 上执行的环境中移植过来的。程序员会在移植过程中添加内核函数和设备函数。原始函数仍然是主机函数。让所有函数默认成为主机函数可以节省程序员更改所有原始函数声明的繁琐工作。
+
+注意，可以在函数声明中同时使用 `__host__` 和 `__device__`。这种组合告诉编译系统为相同的函数生成两个版本的目标代码。一个在主机上执行，只能从主机函数调用。另一个在设备上执行，只能从设备或内核函数调用。这支持一个常见的用例，即相同的函数源代码可以重新编译以生成设备版本。许多用户库函数可能会落入这种类别。
+
+图 2.10 中的第二个显著扩展是内置变量 `threadIdx`、`blockIdx` 和 `blockDim`。回忆一下，所有线程执行相同的内核代码，需要一种方法使它们能够相互区分，并将每个线程指向数据的特定部分。这些内置变量是线程访问提供识别坐标的硬件寄存器的手段。不同线程将看到它们的 `threadIdx.x`、`blockIdx.x` 和 `blockDim.x` 变量中的不同值。为了可读性，我们在讨论中有时会将线程称为 `threadblockIdx.x` 和 `threadIdx.x`。
+
+图 2.10 中的自动变量 `i` 是一个局部变量。在 CUDA 内核函数中，自动变量对每个线程都是私有的。也就是说，每个线程会生成一个 `i` 的版本。如果网格启动了 10,000 个线程，就会有 10,000 个 `i` 的版本，每个线程一个。线程为其 `i` 变量分配的值对其他线程不可见。我们将在第 5 章《内存架构和数据局部性》中详细讨论这些自动变量。
+
+对比图 2.4 和图 2.10，可以揭示出 CUDA 内核的一个重要见解。图 2.10 中的内核函数没有循环对应于图 2.4 中的循环。读者应该问循环去了哪里。答案是循环现在被线程网格所取代。整个网格形成了相当于循环的内容。网格中的每个线程对应于原始循环的一次迭代。这有时被称为循环并行性，其中原始顺序代码的迭代由线程并行执行。
+
+处理不同长度的向量
+
+注意 `addVecKernel` 中的 `if (i < n)` 语句。这是因为并不是所有向量长度都可以表示为块大小的倍数。例如，假设向量长度为 100。最小的高效线程块维度是 32。假设我们选择了 32 作为块大小。为了处理 100 个向量元素，需要启动四个线程块。然而，这四个线程块将有 128 个线程。我们需要禁用线程块 3 中的最后 28 个线程，以避免执行原程序不期望的工作。由于所有线程都将执行相同的代码，所有线程将根据 `i` 值测试与 `n` 的比较。使用 `if (i < n)` 语句，前 100 个线程将执行加法，而最后 28 个线程则不会。这允许内核处理任意长度的向量。
